# cookiecutter-simplepackage

./: LICENSE  Pipfile  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .coveragerc  CHANGES.md  LICENCE  Pipfile  README.md  pyproject.toml  setup.cfg
